# LLMContainer

./: .dockerignore  CMakeLists.llava_server  CMakeLists.txt  Dockerfile  Dockerfile.binary_llava  REANME.md  clip.cpp  clip.h  common.cpp  config.h.in  llama-llava-cli  llama_build_info.cpp  llava-server.cpp  llava.cpp  llava.h  run_llava_server.sh  test-llava-server.py
